--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,7 @@ tracing-subscriber = "0.3.11"
 reqwest = { version = "0.11.11" }
 blake3 = "1.3.1"
 
-# 区块链
-# subxt = {git = "https://github.com/paritytech/subxt", branch = "na-wasm-support"} 
+# 区块链相关
 subxt = "0.24.0"
 # subxt-codegen = "0.24.0"
 sp-core = { version = "6.0.0", default-features = false  }
@@ -40,6 +39,7 @@ ink_prelude ={version = "3", default-features = false}
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
 hex = "0.4.3"
 tiny-bip39 = "0.8.2"
+xsalsa20poly1305 = "0.9.0"
 
 [profile.release]
 opt-level = 3
