--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ sqlx = { version = "0.6.0", default-features = false, features = [
 ] }
 futures = "0.3.13"
 tracing-subscriber = "0.3.11"
+openssl = { version = "0.10", features = ["vendored"] }
 reqwest = { version = "0.11.11" }
 blake3 = "1.3.1"
 
