--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,11 +44,11 @@ hex = "0.4.3"
 tiny-bip39 = "0.8.2"
 xsalsa20poly1305 = "0.9.0"
 
-substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v0.9.36', features = [
-    "std",
-    "ws-client",
-    "staking-xt",
-] }
+# substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v0.9.36', features = [
+#     "std",
+#     "ws-client",
+#     "staking-xt",
+# ] }
 
 
 [profile.release]
