--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,48 +8,49 @@ edition = "2021"
 env_logger = "0.9"
 log = "0.4"
 slab = "0.4"
-serde = "1.0.143"
-serde_json = "1.0.83"
-base64 = "0.13.0"
+serde = "1.0.159"
+serde_json = "1.0.95"
+base64 = "0.13.1"
 
 # 业务处理
-tokio = { version = "1.20.1", features = ["full"] }
-once_cell = "1.13.0"
-chrono = "0.4.19"
-thiserror = "1.0.31"
-anyhow = "1.0.58"
-sqlx = { version = "0.6.0", default-features = false, features = [
+tokio = { version = "1.27.0", features = ["full"] }
+once_cell = "1.17.1"
+chrono = "0.4.24"
+thiserror = "1.0.40"
+anyhow = "1.0.70"
+sqlx = { version = "0.6.3", default-features = false, features = [
     "runtime-tokio-rustls",
     "mysql",
     "macros",
     "chrono",
 ] }
-futures = "0.3.13"
-tracing-subscriber = "0.3.11"
+futures = "0.3.28"
+tracing-subscriber = "0.3.16"
 openssl = { version = "0.10", features = ["vendored"] }
-reqwest = { version = "0.11.11" }
-blake3 = "1.3.1"
+reqwest = { version = "0.11.16" }
+blake3 = "1.3.3"
 
 # 区块链相关
-subxt = { version = "0.25.0" }
-sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
-sp-keyring = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
-sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
+# subxt = "0.26.0"
+hex = "0.4.3"
+tiny-bip39 = "0.8.2"
+xsalsa20poly1305 = "0.9.0"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
     "derive",
     "full",
     "bit-vec",
 ] }
-hex = "0.4.3"
-tiny-bip39 = "0.8.2"
-xsalsa20poly1305 = "0.9.0"
+sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
+sp-keyring = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
+pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
 
-# substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v0.9.36', features = [
-#     "std",
-#     "ws-client",
-#     "staking-xt",
-# ] }
-
+substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v0.9.39', features = [
+    "std",
+    "ws-client",
+    "staking-xt",
+] }
+node-template-runtime = { git = "https://github.com/WeteeDAO/wetee" }
 
 [profile.release]
 opt-level = 3
