同步区块链连接代码

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,8 @@ sp-runtime = { default-features = false, git = "https://github.com/paritytech/su
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
 wetee-runtime = { git = "https://github.com/WeteeDAO/wetee" }
 wetee-assets = { git = "https://github.com/WeteeDAO/wetee" }
+wetee-dao = { git = "https://github.com/WeteeDAO/wetee" }
+wetee-project = { git = "https://github.com/WeteeDAO/wetee" }
 
 [profile.release]
 opt-level = 3
