--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,6 @@ reqwest = { version = "0.11.16" }
 blake3 = "1.3.3"
 
 # 区块链相关
-# subxt = "0.26.0"
 hex = "0.4.3"
 tiny-bip39 = "0.8.2"
 xsalsa20poly1305 = "0.9.0"
@@ -40,11 +39,17 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
     "full",
     "bit-vec",
 ] }
-substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v0.9.39', features = [
+substrate-api-client = { git = 'https://github.com/WeteeDAO/substrate-api-client', branch = 'polkadot-v0.9.39', features = [
     "std",
     "ws-client",
     "staking-xt",
 ] }
+# substrate-api-client = { path = '../substrate-api-client', features = [
+#     "std",
+#     "ws-client",
+#     "staking-xt",
+# ] }
+
 sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
 sp-keyring = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
 sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
