--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ slab = "0.4"
 serde = "1.0.159"
 serde_json = "1.0.95"
 base64 = "0.13.1"
+deadpool = "0.9.5"
 
 # 业务处理
 tokio = { version = "1.27.0", features = ["full"] }
