--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ substrate-api-client = { git = 'https://github.com/WeteeDAO/substrate-api-client
     "jsonrpsee-client",
     "staking-xt",
 ] }
+scale-info = { version = "2.1.1", features = ["derive"] }
 # substrate-api-client = { path = '../substrate-api-client', features = [
 #     "std",
 #     "ws-client",
