--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,33 +33,32 @@ blake3 = "1.3.3"
 hex = "0.4.3"
 tiny-bip39 = "0.8.2"
 xsalsa20poly1305 = "0.9.0"
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
+codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
     "derive",
     "full",
     "bit-vec",
 ] }
-substrate-api-client = { git = 'https://github.com/WeteeDAO/substrate-api-client', branch = 'polkadot-v0.9.39', features = [
+substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v1.0.0', features = [
     "std",
-    "tungstenite-client",
-    "jsonrpsee-client",
+    # "tungstenite-client",
+    # "jsonrpsee-client",
     "staking-xt",
 ] }
-scale-info = { version = "2.1.1", features = ["derive"] }
 # substrate-api-client = { path = '../substrate-api-client', features = [
 #     "std",
 #     "ws-client",
 #     "staking-xt",
 # ] }
 
-sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
-sp-keyring = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
-sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.39" }
-wetee-runtime = { git = "https://github.com/WeteeDAO/wetee", "branch" = "hackathon-2023-summer"}
-wetee-assets = { git = "https://github.com/WeteeDAO/wetee", "branch" = "hackathon-2023-summer"}
-wetee-org = { git = "https://github.com/WeteeDAO/wetee", "branch" = "hackathon-2023-summer"}
-wetee-project = { git = "https://github.com/WeteeDAO/wetee", "branch" = "hackathon-2023-summer"}
-wetee-gov = { git = "https://github.com/WeteeDAO/wetee", "branch" = "hackathon-2023-summer"}
+sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
+sp-keyring = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
+wetee-runtime = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
+wetee-assets = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
+wetee-org = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
+wetee-project = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
+wetee-gov = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
 
 [profile.release]
 opt-level = 3
